# rplidar-scanner

./: .gitignore  CMakeLists.txt  main.cpp  main2.cpp
src/lidar/: lidar.h
